<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_room_create"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/title_add_room"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/navigation_record"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_record"
        app:labelVisibilityMode="unlabeled"/>
</menu>